--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeeping.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeeping.cshtml
@@ -29,7 +29,7 @@
 </h3>
 <div class="box">
     <div class="row-fluid">
-        <p><a href="/settings/housekeeping/storage/">Log files</a></p>
+        <a href="/settings/housekeeping/storage/" class="btn btn-blue">Log files</a>
     </div>
 </div>
 
