--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeSettings.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeSettings.cshtml
@@ -4,7 +4,30 @@
 }
 
 <form class="" action="" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
- 
+    @if (Model.Extension.Model.UpdatePending)
+    {
+        <div class="alert">
+            <a href="#" class="close" data-dismiss="alert">×</a>
+            <strong>Updates Pending</strong> Restart the system to apply pending updates.
+        </div>
+    }
+    <h3 class="box-header">Actions</h3>
+    <div class="box">
+        <div class="row-fluid">
+            <div class="span2">
+                <div class="btn-group">
+                    <button class="btn btn-red" data-toggle="modal" data-target="#reboot-modal">System Restart</button>
+                    <button class="btn btn-danger dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                        <li><a href="#" data-toggle="modal" data-target="#shutdown-modal">Shutdown host device</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="span10"></div>
+        </div>
+    </div>
+
+    <h3 class="box-header">Overview</h3>
     <div class="box">
         <div class="row-fluid">
             <table class="table table-condensed" id="bindings-table">
@@ -197,22 +220,38 @@
                     </tr>
                 }
 
+                    <tr>
+                        <th><a href="/settings/security/">Security</a></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+
+                    <tr>
+                        <th><a href="/settings/Performance/">Performance</a></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+
+                    <tr>
+                        <th><a href="/settings/housekeeping/">Housekeeping</a></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+
+
+
                 </tbody>
             </table>
         </div>
-    </div>
-
-    <div class="row-fluid">
-        <div class="span2">
-            <div class="btn-group">
-                <button class="btn btn-red" data-toggle="modal" data-target="#reboot-modal">System Restart</button>
-                <button class="btn btn-danger dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                    <li><a href="#" data-toggle="modal" data-target="#shutdown-modal">Shutdown host device</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="span10"></div>
     </div>
 </form> 
 
