--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsAdd.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsAdd.cshtml
@@ -23,6 +23,14 @@
 </div>
 <form class="" action="" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
 
+    @if (Model.Extension.Model.UpdatePending)
+    {
+        <div class="alert">
+            <a href="#" class="close" data-dismiss="alert">×</a>
+            <strong>Updates Pending</strong> Restart the system to apply pending updates.
+        </div>
+    }
+
     <h3 class="box-header">
         Extensions
     </h3>
