--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsExtensions.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsExtensions.cshtml
@@ -23,8 +23,22 @@
 <div class="setting-heading">
     <h2>Extensions</h2>
 </div>
+@if (Model.Extension.Model.UpdatePending)
+{
+    <div class="alert">
+        <a href="#" class="close" data-dismiss="alert">×</a>
+        <strong>Updates Pending</strong> Restart the system to apply pending updates.
+    </div>
+}
 <form method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
-
+    <h3 class="box-header">Actions</h3>
+    <div class="box">
+        <div class="row-fluid">
+            <a href="settings/add/" class="btn btn-blue">Add</a>
+            <a href="settings/update/" class="btn btn-blue">Update</a>
+        </div>
+    </div>
+    <h3 class="box-header">Status</h3>
     <div class="box">
         <div class="row-fluid">
 
@@ -60,12 +74,6 @@
                 </tbody>
             </table>
         </div>
-
-        <div class="row-fluid">
-            <a href="settings/add/" class="btn btn-blue">Add</a>
-            <a href="settings/update/" class="btn btn-blue">Update</a>
-        </div>
-
     </div>
 
     <div class="row-fluid">
