Remove options to Update/Install Extensions #3

--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeSettings.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/HomeSettings.cshtml
@@ -43,7 +43,7 @@
 
                     <tr>
                         <td>Version</td>
-                        <td>@Model.Extension.Model.Version</td>
+                        <td>@Model.Extension.Model.Version <a href="/settings/update/">Update</a></td>
                         <td></td>
                         <td></td>
                         <td></td>
