--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsAdd.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsAdd.cshtml
@@ -21,57 +21,18 @@
 <div class="setting-heading">
     <h2>Add Extensions</h2>
 </div>
-<form class="" action="" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
 
-    @if (Model.Extension.Model.UpdatePending)
-    {
-        <div class="alert">
-            <a href="#" class="close" data-dismiss="alert">×</a>
-            <strong>Updates Pending</strong> Restart the system to apply pending updates.
-        </div>
-    }
-
-    <h3 class="box-header">
-        Extensions
-    </h3>
-    <div class="box">
-        <div class="row-fluid">
-
-            <table class="table table-condensed">
-                <thead>
-                    <tr>
-                        <th>Assembly Name</th>
-                        <th>Latest Version</th>
-                        <th>Add</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var Extension in @Model.Extension.Model.Extensions)
-                    {
-                        <tr>
-                            <td>@Extension.AssemblyName</td>
-                            <td>@Extension.VersionLatest</td>
-                            <td><input type="checkbox" name="add" value="@Extension.AssemblyName" /></td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-
-        <div class="row-fluid">
-            <div class="span10">
-                <p>Version data last updated at @Model.Extension.Model.LastUpdate <a id="update-refresh" href="#">Refresh</a></p>
-            </div>
-            <div class="span2">
-                <button type="submit" value="submit" class="btn btn-green btn-block">Update</button>
-            </div>
-        </div>
+@if (Model.Extension.Model.UpdatePending)
+{
+    <div class="alert">
+        <a href="#" class="close" data-dismiss="alert">×</a>
+        <strong>Updates Pending</strong> Restart the system to apply pending updates.
     </div>
-</form> 
+}
 
 <form class="" action="/multiplug/sideload/" method="post" accept-charset="utf-8" enctype="multipart/form-data">
     <h3 class="box-header">
-        Sideload
+        Sideload Extensions
     </h3>
     <div class="box">
         <div class="row-fluid">
@@ -89,54 +50,3 @@
     </div>
 </form> 
 
-<form class="" action="" method="post" accept-charset="utf-8" enctype="application/x-www-form-urlencoded">
-    <h3 class="box-header">
-        Package Manager
-    </h3>
-    <div class="box">
-        <div class="row-fluid">
-            <div class="span12">
-                <div class="row-fluid"><div class="span12">API URL</div></div>
-                <div class="row-fluid">
-                    <div class="span12">
-                        <input name="PackageManagerAPI" class="span12" type="text" placeholder="URL" value="https://api-v2v3search-0.nuget.org/query">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row-fluid">
-            <div class="span6">
-                <div class="row-fluid"><div class="span12">Filter</div></div>
-                <div class="row-fluid">
-                    <div class="span12">
-                        <input name="Filter" class="span12" type="text" placeholder="URL" value="MultiPlug.Ext.">
-                    </div>
-                </div>
-            </div>
-            <div class="span6">
-                <div class="row-fluid"><div class="span12">Prerelease</div></div>
-                <div class="row-fluid">
-                    <div class="span12">
-                        <input type="checkbox" name="Prerelease" value="" checked />
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</form>
-
-    <script>
-
-        $('#update-refresh').click(function (e) {
-            e.preventDefault();
-
-            $.ajax({
-                type: "POST",
-                url: 'multiplug/status/update/',
-                success: function (data) {
-                    location.reload();
-                },
-            });
-        });
-
-    </script>
