--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/Layout.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/Layout.cshtml
@@ -216,18 +216,10 @@
             <ul>
                 <li class="@AppsActive lp-dropdown">
                     <a href="#" class="lp-dropdown-toggle" id="pages-dropdown"><span class="icon-dashboard"></span>Apps</a>
-                    <ul class="lp-dropdown-menu simple" data-dropdown-owner="pages-dropdown">
-                        @foreach (var HttpEndpoint in @Model.MultiPlugAPI.HttpEndpoints.App)
-                        {
-                            if( HttpEndpoint.isHidden )
-                            {
-                                continue;
-                            }
-
-                            <li>
-                                <a tabindex="@GetTabIndex()" href="@HttpEndpoint.Href"><i class="icon-dashboard"></i>&nbsp;&nbsp;@HttpEndpoint.Name</a>
-                            </li>
-                        }
+                    <ul class="lp-dropdown-menu simple" id="pages-dropdown-ul" data-dropdown-owner="pages-dropdown">
+                        <li>
+                            <a tabindex="" href="#"><i class="icon-dashboard"></i>&nbsp;&nbsp;XXXXXXXXXXXXXXXXXXXXXXX</a>
+                        </li>
                     </ul>
                 </li>
 
@@ -237,18 +229,10 @@
 
                 <li class="@ExtensionsActive lp-dropdown">
                     <a href="#" class="lp-dropdown-toggle" id="pages-dropdown2"><span class="icon-cogs"></span>Extensions</a>
-                    <ul class="lp-dropdown-menu simple" data-dropdown-owner="pages-dropdown2">
-                        @foreach (var HttpEndpoint in @Model.MultiPlugAPI.HttpEndpoints.Settings)
-                        {
-                            if (HttpEndpoint.isHidden)
-                            {
-                                continue;
-                            }
-
-                            <li>
-                                <a tabindex="@GetTabIndex()" href="@HttpEndpoint.Href"><i class="icon-dashboard"></i>&nbsp;&nbsp;@HttpEndpoint.Name</a>
-                            </li>
-                        }
+                    <ul class="lp-dropdown-menu simple" id="pages-dropdown2-ul" data-dropdown-owner="pages-dropdown2">
+                        <li>
+                            <a tabindex="" href="#"><i class="icon-dashboard"></i>&nbsp;&nbsp;XXXXXXXXXXXXXXXXXXXXXXX</a>
+                        </li>
                     </ul>
                 </li>
 
@@ -277,6 +261,9 @@
                             <a tabindex="@GetTabIndex()" href="@Raw(Model.Context.Paths.Roots.System)/settings/security/"><i class="icon-lock"></i>&nbsp;&nbsp;Security</a>
                         </li>
                         <li>
+                            <a tabindex="@GetTabIndex()" href="@Raw(Model.Context.Paths.Roots.System)/settings/permissions/"><i class="icon-star"></i>&nbsp;&nbsp;Permissions</a>
+                        </li>
+                        <li>
                             <a tabindex="@GetTabIndex()" href="@Raw(Model.Context.Paths.Roots.System)/settings/performance/"><i class="icon-signal"></i>&nbsp;&nbsp;Performance</a>
                         </li>
                         <li>
@@ -292,7 +279,6 @@
 
     <script src="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.mplib/scripts/bootstrap.js" type="text/javascript"></script>
     <script src="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.thm.default2016/scripts/adminflare.min.js" type="text/javascript"></script>
-
     <script src="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.mplib/scripts/websocket.min.js" type="text/javascript"></script>
     <script src="stream/hubs"></script>
     <script src="@Raw(Model.Context.Paths.Roots.Assets)multiplug.ext.mplib/scripts/multiplug.js?id=@Model.Context.WebSocketId" type="text/javascript"></script>
@@ -326,26 +312,72 @@
             $(".btn-deploy").text("Deploy");
         }
 
-        $.connection.wS.on("Send", function (id, Group) {
-            if (id == "@Raw(Model.MultiPlugAPI.Runtime.Deploy.EventId)") {
-
-                if (Group.Pairs[0].Value == 'true')
-                {
-                    StartToggleActiveClass();
-                }
-                else
-                {
-                    StopToggleActiveClass();
-                }
-            }
-        });
-
 @{
     if ( Model.MultiPlugAPI.Runtime.Deploy.Pending)
     {
         <text>StartToggleActiveClass();</text>
     }
 }
+        function NewMenuItem(theHref, theName) {
+            return '<li style="display: block; width: 100%;"><a style="display: block; width: 100%;" href="' + theHref + '"><i class="icon-dashboard"></i>&nbsp;&nbsp;' + theName + '</a></li>'
+        }
+
+        $(document).ready(function () {
+            $.connection.wS.on("Send", function (id, Group) {
+                if (id == "@Raw(Model.MultiPlugAPI.Runtime.Deploy.EventId)") {
+
+                    if (Group.Pairs[0].Value == 'true')
+                    {
+                        StartToggleActiveClass();
+                    }
+                    else
+                    {
+                        StopToggleActiveClass();
+                    }
+                }
+            });
+
+            $('#pages-dropdown').on('click', function (e) {
+                e.preventDefault();
+                $.ajax({
+                    url: "@Raw(Model.Context.Paths.Roots.MultiPlug)httpendpoints/apps",
+                    type: "get",
+                    async: false,
+                    success: function (data) {
+                        var AppsUL = $("#pages-dropdown-ul");
+                        AppsUL.empty();
+                        for (let i in data) {
+                            if (!data[i].isHidden) {
+                                AppsUL.append(NewMenuItem(data[i].Href, data[i].Name));
+                            }
+                        }
+                    },
+                    error: function () {
+                    }
+                });
+            });
+
+            $('#pages-dropdown2').on('click', function (e) {
+                e.preventDefault();
+                $.ajax({
+                    url: "@Raw(Model.Context.Paths.Roots.MultiPlug)httpendpoints/settings",
+                    type: "get",
+                    async: false,
+                    success: function (data) {
+                        var SettingsUL = $("#pages-dropdown2-ul");
+                        SettingsUL.empty();
+                        for (let i in data) {
+                            if( ! data[i].isHidden )
+                            {
+                                SettingsUL.append(NewMenuItem(data[i].Href, data[i].Name));
+                            }
+                        }
+                    },
+                    error: function () {
+                    }
+                });
+            });
+        });
     </script>
 
     <!-- Websocket Reconnect Modal -->
@@ -355,7 +387,6 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                    @*<button id="x-restart-btn" type="button" class="close" data-dismiss="modal">&times;</button>*@
                     <h4 id="websocket-title" class="modal-title">Connection lost.</h4>
                 </div>
                 <div class="modal-body">
@@ -363,12 +394,7 @@
                     <p id="websocket-txt-line2">Please wait.</p>
                 </div>
                 <div class="modal-footer">
-                    @*<button id="cancel-restart-btn" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button id="restart-btn" class="btn btn-red">Restart</button>*@
                 </div>
-                @*<form id="restart-form">
-                    <input type="hidden" name="Command" value="restart" />
-                </form>*@
             </div>
 
         </div>
