--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeepingStorage.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeepingStorage.cshtml
@@ -12,23 +12,39 @@
 </h3>
 <div class="box">
     <div class="row-fluid">
-        <div id="jstree">
-            <ul>
-                @foreach (var FileStorage in @Model.Extension.Model.FileStorage)
-                {
-                    <li>
-                        @FileStorage.Extension
-                        <ul>
-                            @foreach (var FileListing in FileStorage.FileStatues)
-                            {
-                                <li data-jstree='{"icon":"jstree-file"}'>
-                                    <a href="#">@Raw((!FileListing.Orphan) ? "(In use) " : "")@FileListing.FullName</a>
-                                </li>
-                            }
-                        </ul>
-                    </li>
-                }
-            </ul>
+        <div class="span6">
+            <div id="jstree">
+                <ul>
+                    @foreach (var FileStorage in @Model.Extension.Model.FileStorage)
+                    {
+                        <li>
+                            @FileStorage.Extension
+                            <ul>
+                                @foreach (var FileListing in FileStorage.FileStatues)
+                                {
+                                    <li data-jstree='{"icon":"jstree-file"}' data-filename="@FileListing.FullName" data-extension="@FileStorage.Extension" data-multiplugapi="@Raw(Model.Context.Paths.Roots.MultiPlug)housekeeping/files/extensions/@FileStorage.Extension/view/@FileListing.FullName">
+                                        <a href="#">@Raw((!FileListing.Orphan) ? "(In use) " : "")@FileListing.FullName</a>
+                                    </li>
+                                }
+                            </ul>
+                        </li>
+                    }
+                </ul>
+            </div>
+        </div>
+
+        <div class="span6">
+            <div class="row-fluid">
+                <div class="span9">
+                    <p id="FileNameHeading">File</p>
+                </div>
+                <div class="span3">
+                    <a class="btn btn-red" id="btn-deletefile" href=""><i class="icon-trash"></i></a>
+                </div>
+            </div>
+            <div class="row-fluid">
+                <textarea id="Logging" spellcheck="false" rows="3" class="input-block-level" wrap="off" style="margin: 0px; height: 450px;"></textarea>
+            </div>
         </div>
     </div>
 </div>
@@ -37,5 +53,72 @@
 <script src="assets/multiplug.ext.mplib/scripts/jstree.min.js"></script>
 
 <script>
-    $('#jstree').jstree();
+    function scrollLogToBottom(loggingTextArea) {
+        var textarea = document.getElementById(loggingTextArea);
+        textarea.scrollTop = textarea.scrollHeight;
+    }
+
+    $('#jstree').jstree({
+        "core": {
+            "multiple": false,
+            "animation": 0,
+            "check_callback": true,
+        }
+    });
+
+    var NodeSelected
+
+    $('#jstree').on("changed.jstree", function (e, data) {
+        var SelectedFile = $('#' + data.selected[0]);
+        var APIUrl = SelectedFile.attr("data-multiplugapi");
+
+        if (typeof APIUrl !== 'undefined' && APIUrl !== false) {
+
+            NodeSelected = data.selected[0];
+
+            var FileName = SelectedFile.attr("data-filename");
+            var ExtensionName = SelectedFile.attr("data-extension");
+
+            $('#FileNameHeading').text(FileName);
+            $("#btn-deletefile").attr('href', 'multiplug/housekeeping/files/extensions/' + ExtensionName + '/delete/' + FileName);
+            $('#Logging').val('Loading File');
+
+            $.get(APIUrl, function (data) {
+
+            })
+            .done(function (data) {
+                var LoggingBox = $('#Logging');
+                var builder = [];
+                data.forEach(function (line) {
+                    builder.push(line);
+                    builder.push("\n");
+                });
+                LoggingBox.val('');
+                LoggingBox.val(builder.join(''));
+                scrollLogToBottom('Logging');
+            });
+        }
+    });
+
+    $("#btn-deletefile").click(function (event) {
+        event.preventDefault();
+
+        if ($(this).attr('href') == "")
+        {
+            return;
+        }
+
+
+        $.post($(this).attr('href'), function (data) {
+
+        })
+        .done(function (data) {
+
+            $("#jstree").jstree(true).delete_node(NodeSelected);
+
+            $('#Logging').val('');
+            $("#btn-deletefile").attr('href', '');
+            $('#FileNameHeading').text("");
+        });
+    });
 </script>
