--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsApps.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsApps.cshtml
@@ -32,6 +32,7 @@
                 <div class="row-fluid"><div class="span12">Default App</div></div>
                 <div class="row-fluid">
                     <select class="span12" name="DefaultDashboard">
+                        <option value=""></option>
                         @foreach (var x in @Model.Extension.Model.Dashboards)
                         {
                             <option value="@x.Key" @if (x.Value) { <text> selected </text> }>@x.Key</option>
