--- a/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeepingStorage.cshtml
+++ b/src/MultiPlug.Ext.Thm.Default2016/Resources/SettingsHousekeepingStorage.cshtml
@@ -7,14 +7,32 @@
     <h2>Housekeeping</h2>
 </div>
 
-<h3 class="box-header">
-    Log Files
-</h3>
 <div class="box">
     <div class="row-fluid">
-        <div class="span6">
+        <div class="span5">
+            <h4>Log Files</h4>
+        </div>
+        <div class="span7">
+            <h4 id="FileNameHeading">File:</h4>
+        </div>
+    </div>
+
+    <div class="row-fluid">
+        <div class="span5">
             <div id="jstree">
                 <ul>
+                    <li>
+                        MultiPlug.Core
+                        <ul>
+                            @foreach (var FileListing in Model.Extension.Model.SystemFileStorage)
+                            {
+                                <li data-jstree='{"icon":"jstree-file"}' data-filename="@FileListing.FullName" data-multiplugapi="@Raw(Model.Context.Paths.Roots.MultiPlug)housekeeping/files/system/view/@FileListing.FullName">
+                                    <a href="#">@Raw((!FileListing.Orphan) ? "(In use) " : "")@FileListing.FullName</a>
+                                </li>
+                            }
+                        </ul>
+                    </li>
+
                     @foreach (var FileStorage in @Model.Extension.Model.FileStorage)
                     {
                         <li>
@@ -33,17 +51,16 @@
             </div>
         </div>
 
-        <div class="span6">
-            <div class="row-fluid">
-                <div class="span9">
-                    <p id="FileNameHeading">File</p>
-                </div>
-                <div class="span3">
-                    <a class="btn btn-red" id="btn-deletefile" href=""><i class="icon-trash"></i></a>
-                </div>
-            </div>
+        <div class="span7">
             <div class="row-fluid">
                 <textarea id="Logging" spellcheck="false" rows="3" class="input-block-level" wrap="off" style="margin: 0px; height: 450px;"></textarea>
+            </div>
+            <div class="row-fluid">
+                <div class="span10">
+                </div>
+                <div class="span2">
+                    <a class="btn btn-block btn-red" id="btn-deletefile" href=""><i class="icon-trash"> Delete</i></a>
+                </div>
             </div>
         </div>
     </div>
@@ -80,7 +97,16 @@
             var ExtensionName = SelectedFile.attr("data-extension");
 
             $('#FileNameHeading').text(FileName);
-            $("#btn-deletefile").attr('href', 'multiplug/housekeeping/files/extensions/' + ExtensionName + '/delete/' + FileName);
+
+            if (ExtensionName)
+            {
+                $("#btn-deletefile").attr('href', 'multiplug/housekeeping/files/extensions/' + ExtensionName + '/delete/' + FileName);
+            }
+            else
+            {
+                $("#btn-deletefile").attr('href', 'multiplug/housekeeping/files/system/delete/' + FileName);
+            }
+
             $('#Logging').val('Loading File');
 
             $.get(APIUrl, function (data) {
@@ -108,7 +134,6 @@
             return;
         }
 
-
         $.post($(this).attr('href'), function (data) {
 
         })
@@ -118,7 +143,7 @@
 
             $('#Logging').val('');
             $("#btn-deletefile").attr('href', '');
-            $('#FileNameHeading').text("");
+            $('#FileNameHeading').text("File:");
         });
     });
 </script>
